<resources>
    <string name="app_name">花椒工具箱</string>
    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>
    <string name="nav_header_desc">导航栏顶部</string>
    <string name="action_settings">设置</string>

    <string name="menu_jwxt">教务系统</string>
    <string name="menu_account">账号</string>
    <string name="menu_about">关于</string>
    <string name="tile_click2login">一键登录</string>
    <string name="dialog_account_stuid_hint">输入智慧交大账号</string>
    <string name="dialog_account_password_hint">输入智慧交大密码</string>
    <string name="dialog_account_choose_isp">选择运营商</string>
    <string name="dialog_account_login_btn">登录</string>
    <string name="menu_wifi">校园网</string>
    <string name="layout_empty_text">暂无数据</string>
    <string name="jwxt_score">成绩查询</string>
    <string name="menu_gpa">绩点查询</string>
    <string name="add">添加账号</string>
    <string name="dialog_account_tips">使用校园网时需要选择运营商以登录，若不需要可不选择</string>
    <string name="wifi_status_icon">Wi-Fi状态图标</string>
    <string name="wifi_disabled">Wi-Fi未启用</string>
    <string name="ssid_not_connected">未连接网络</string>
    <string name="login">登录</string>
    <string name="logging_in">登录中…</string>
    <string name="logout">注销</string>
    <string name="logging_out">注销中…</string>
    <string name="account_config">账号配置</string>
    <string name="elective_course">选修课</string>
    <string name="course">必修课</string>
    <string name="schedule_course">必修课</string>
    <string name="account_refresh">刷新登录</string>
    <string name="account_refresh_sub">启动应用时刷新登录以更新cookies</string>
</resources>