<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_jwxt"
            android:icon="@drawable/ic_menu_jwxt"
            android:title="@string/menu_jwxt"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_wifi"
            android:icon="@drawable/ic_menu_wifi"
            android:title="@string/menu_wifi" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>
