<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/dialog_account_stuid_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/primary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_stuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/dialog_account_password_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/primary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_passwrod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/dialog_account_choose_isp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary">
        <Spinner
            android:id="@+id/account_isp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/isp_options"
            style="@style/SpinnerStyle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_account_tips"
        android:textColor="@color/textSecond"
        android:textSize="12dp" />

</LinearLayout>
</ScrollView>