<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lonx.ecjtutoolbox.ui.wifi.WifiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.wifi.WifiFragment">

        <!-- WiFi状态信息 -->
        <com.google.android.material.card.MaterialCardView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/wifiStatusCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:elevation="2dp"
            app:cardUseCompatPadding="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <!-- WiFi状态图标 -->
                <ImageView
                    android:id="@+id/wifiStatusIcon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:onClick="@{(view) -> viewModel.openWifiSettings(view)}"
                    android:contentDescription="图标"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:srcCompat="@drawable/ic_wifi_disabled"
                    app:bindSrcCompat="@{viewModel.wifiStatusIcon}" />
                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wifiStatusIcon"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <!-- WiFi状态描述文本 -->
                <TextView
                    android:id="@+id/lbWifiStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    android:text="网络状态"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line1"
                    tools:text="Wi-Fi状态" />
                <TextView
                    android:id="@+id/tvWifiStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    android:text="@{viewModel.wifiStatusText}"
                    android:textColor="@color/secondaryText"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/wifiStatusIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@string/wifi_disabled" />
                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWifiStatusText"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <!-- 当前连接SSID显示 -->
                <TextView
                    android:id="@+id/lbSSID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:layout_gravity="center"
                    android:text="SSID"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/line2"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="SSID" />
                <TextView
                    android:id="@+id/tvSSID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:layout_gravity="center"
                    android:text="@{viewModel.ssid1}"
                    android:textColor="@color/secondaryText"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/line2"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="@{(view) -> viewModel.checkAndRequestPermissions(view)}"
                    tools:text="@string/ssid_not_connected" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- 按钮部分 -->
        <com.google.android.material.card.MaterialCardView
            app:layout_constraintTop_toBottomOf="@id/wifiStatusCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:elevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- 登录按钮 -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_gravity="center"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/white"
                    app:icon="@drawable/ic_wifi_login"
                    app:iconTint="@color/textColor"
                    app:rippleColor="@color/primary"
                    tools:text="@string/login"
                    app:elevation="0dp"
                    android:textColor="@color/black"
                    android:enabled="@{!viewModel.isLoggingIn}"
                    android:onClick="@{(view) -> viewModel.loginIn(view)}"
                    android:text="@{viewModel.isLoggingIn ? @string/logging_in : @string/login}" />

                <!-- 注销按钮 -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logoutButton"
                    android:layout_gravity="center"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_wifi_logout"
                    app:backgroundTint="@color/white"
                    app:iconTint="@color/textColor"
                    app:rippleColor="@color/primary"
                    app:elevation="0dp"
                    tools:text="@string/logout"
                    android:textColor="@color/black"
                    android:enabled="@{!viewModel.isLoggingOut}"
                    android:onClick="@{(view) -> viewModel.loginOut(view)}"
                    android:text="@{viewModel.isLoggingOut ? @string/logging_out : @string/logout}" />

                <!-- 账号配置按钮 -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accountButton"
                    android:layout_gravity="center"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/white"
                    app:iconTint="@color/textColor"
                    app:rippleColor="@color/primary"
                    app:elevation="0dp"
                    app:icon="@drawable/ic_wifi_account"
                    android:textColor="@color/black"
                    android:enabled="@{!viewModel.dialogShowed}"
                    android:onClick="@{(view) -> viewModel.accountConfig(view)}"
                    android:text="@string/account_config" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
